--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -577,6 +577,16 @@ div#aboutBlock p {
 }
 
 .game-img3 {
+	background-image: url('/images/SeaOfThieves.jpg');
+	background-size: 100%;
+}
+
+.game-img4 {
+	background-image: url('/images/MHW.jpg');
+	background-size: 100%;
+}
+
+.wtn {
 	background-image: url('/images/PocketCasts_Banner.png');
 	background-size: 100%;
 }
