--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -23,7 +23,7 @@ block content
 				| - World of Warcraft </br>
 				| - ARK: Survival Evolved (Community Server) </br>
 				| - Minecraft (Community Server) </br>
-				| - Monster Hunter: World </br>
+				| - Monster Hunter World </br>
 				| - PUBG </br>
 				| - Overwatch </br>
 				| - League of Legends </br>
@@ -31,6 +31,7 @@ block content
 				| </br>
 				| Games incoming to PixelPub: </br>
 				| </br>
+				| - Sea of Thieves </br>
 				| - Borderlands 3 </br>
 				| - Anthem </br>
 				| </br>
