--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -23,7 +23,11 @@ block content
 			td
 				img(src='/images/wow-battle-for-azeroth-logo-press-1-small.png')#game2Icon
 			td
-				img(src='/images/PocketCasts_Logo.png')#game3Icon
+				img(src='/images/SoTlogo.png')#game3Icon
+			td
+				img(src='/images/mhwlogo.png')#game4Icon
+			td
+				img(src='/images/PocketCasts_Logo.png')#wtnIcon
 			td
 				img(src='/images/twitch-logo-1.png')#twitchIcon
 			td
@@ -33,7 +37,7 @@ block content
 	a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
-		| Looking for a large, active and rewarding Destiny 2 community? Join Wrath Incarnate! <br />
+		| Looking for a friendly, active and rewarding Destiny 2 community? Join #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") Wrath Incarnate]! <br />
 		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of Osiris! <br />
 		| Click the link #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
 	div#picGame2.game-img2.parallax.long
@@ -44,6 +48,19 @@ block content
 		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on Sargeras-Alliance & Bleeding Hollow-Horde! <br />
 		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/uw3PMqV") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
+	a(href="http://pixelpubgaming.com/blog/post/sea-of-thieves")
+		h1 Treasure & Adventure Awaits!
+	p#descGame3.between-text-block 
+		| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br />
+		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br />
+		| For more info on how to join visit our #[a(href="http://pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]!
+	div#picGame4.game-img4.parallax.long
+	a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate")
+		h1 Hunters Unite!
+	p#descGame4.between-text-block 
+		| We are looking for hunters that enjoy community, fun and have a helpful attitude. <br />
+		| If you are interested in joining, visit our #[a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate") blog] or jump right into our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and get to hunting!	
+	div#wtn.wtn.parallax.long
 	div.divTable
 		div.divTableRow
 			div.divTableCell
