frontpage changes + ep 26 WTN podcast

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -563,7 +563,7 @@ div#aboutBlock p {
 }
 
 .wtn {
-	background-image: url('/images/PocketCasts_Banner.png');
+	background-image: url('/images/wtn-banner.png');
 	background-size: 100%;
 }
 
