--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -27,7 +27,7 @@ block content
 			td
 				img(src='/images/mhwlogo.png')#game4Icon
 			td
-				img(src='/images/PocketCasts_Logo.png')#wtnIcon
+				img(src='/images/wtnlogo-small.png')#wtnIcon
 			td
 				img(src='/images/twitch-logo-1.png')#twitchIcon
 			td
