frontpage - ark - ep 27 - WTN

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -562,6 +562,11 @@ div#aboutBlock p {
 	background-size: 100%;
 }
 
+.game-img5 {
+	background-image: url('/images/ark_banner.jpg');
+	background-size: 100%;
+}
+
 .wtn {
 	background-image: url('/images/wtn-banner.png');
 	background-size: 100%;
