--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -5,42 +5,44 @@ block content
 		h1 About Us
 		div#aboutBlock
 			p
-				| Q: Wat is PixelPub? </br>
-				| A: An awesome gaming community! </br>
-				| </br>
-				| Q: Wat sort of "gaming" does your community take part in? </br>
-				| A: All sorts of games! Videogames, card games, board games, mobile games! </br>
-				| </br>
-				| Q: How do you spell what? </br>
-				| A: Wat? </br>
-				| </br>
-				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play? </br>
-				| A: That is a great question! Here is a general list of games our community participates in. </br>
-				| </br>
-				| Current Games (as of 2018): </br>
-				| </br>
-				| - Destiny 2 </br>
-				| - World of Warcraft </br>
-				| - ARK: Survival Evolved (Community Server) </br>
-				| - Minecraft (Community Server) </br>
-				| - Monster Hunter World </br>
-				| - PUBG </br>
-				| - Overwatch </br>
-				| - League of Legends </br>
-				| - Warframe </br>
-				| </br>
-				| Games incoming to PixelPub: </br>
-				| </br>
-				| - Sea of Thieves </br>
-				| - Borderlands 3 </br>
-				| - Anthem </br>
-				| </br>
-				| If your game is not mentioned, start the fire in our community for your game! </br>
-				| It may show up on the list one day! </br>
-				| </br>
-				| Q: This all sounds awesome! How do I become part of this community? </br>
-				| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! </br>
-				| Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") YouTube], #[a(href="https://www.facebook.com/pixelpub") Facebook], #[a(href="https://www.instagram.com/pixelpubtv/") Instagram], #[a(href="https://twitter.com/pixelpubtv") Twitter]), we would love to hear from you! </br>
-				| </br>
-				| Q: Is it "PixelPub" or "Pixel Pub"? </br>
+				| Q: Wat is PixelPub? <br>
+				| A: An awesome gaming community! <br>
+				| <br>
+				| Q: Wat sort of "gaming" does your community take part in? <br>
+				| A: All sorts of games! Videogames, card games, board games, mobile games! <br>
+				| <br>
+				| Q: How do you spell what? <br>
+				| A: Wat? <br>
+				| <br>
+				| Q: Ok Ok, I get it, PixelPub is a gaming community, but what games do you currently play? <br>
+				| A: That is a great question! Here is a general list of games our community participates in. <br>
+				| <br>
+				| Current Games (as of 2018): <br>
+				| <br>
+				| - Destiny 2 <br>
+				| - World of Warcraft <br>
+				| - ARK: Survival Evolved (Community Server) <br>
+				| - Minecraft (Community Server) <br>
+				| - Monster Hunter World <br>
+				| - Fortnite <br>
+				| - PUBG <br>
+				| - Rainbow Six Siege <br>
+				| - Overwatch <br>
+				| - League of Legends <br>
+				| - Warframe <br>
+				| <br>
+				| Games incoming to PixelPub: <br>
+				| <br>
+				| - Sea of Thieves <br>
+				| - Borderlands 3 <br>
+				| - Anthem <br>
+				| <br>
+				| If your game is not mentioned, start the fire in our community for your game! <br>
+				| It may show up on the list one day! <br>
+				| <br>
+				| Q: This all sounds awesome! How do I become part of this community? <br>
+				| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! <br>
+				| Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") YouTube], #[a(href="https://www.facebook.com/pixelpub") Facebook], #[a(href="https://www.instagram.com/pixelpubtv/") Instagram], #[a(href="https://twitter.com/pixelpubtv") Twitter]), we would love to hear from you! <br>
+				| <br>
+				| Q: Is it "PixelPub" or "Pixel Pub"? <br>
 				| A: Yes
