--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -10,10 +10,10 @@ block content
 				img(src='/images/ppl-1.png')#ppIntroImg
 			div#ppIntroTblRow1CellRight.divTableCell
 				p#ppIntroDesc.profile-text-block.left 
-					| Welcome to PixelPub! <br />
-					| We are a gaming community, one that strives to be fun, <br />
-					| rewarding, and brings gamers together to do what they love most, gaming. <br />
-					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br /> <br />
+					| Welcome to PixelPub! <br>
+					| We are a gaming community, one that strives to be fun, <br>
+					| rewarding, and brings gamers together to do what they love most, gaming. <br>
+					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br> <br>
 					| The following are some PixelPub community highlights!
 	
 	table#gameIconsTbl.game-icons.display-none
@@ -27,6 +27,8 @@ block content
 			td
 				img(src='/images/mhwlogo.png')#game4Icon
 			td
+				img(src='/images/arklogo.png')#game5Icon
+			td
 				img(src='/images/wtnlogo-small.png')#wtnIcon
 			td
 				img(src='/images/twitch-logo-1.png')#twitchIcon
@@ -37,29 +39,36 @@ block content
 	a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
-		| Looking for a friendly, active and rewarding Destiny 2 community? Join #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") Wrath Incarnate]! <br />
-		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of Osiris! <br />
+		| Looking for a friendly, active and rewarding Destiny 2 community? Join #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") Wrath Incarnate]! <br>
+		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of Osiris! <br>
 		| Click the link #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
 	div#picGame2.game-img2.parallax.long
 	a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas")
 		h1 BATTLE FOR AZEROTH
 	p#descGame2.between-text-block 
-		| PixelPub is proud to represent #[a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft clan! <br />
-		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on Sargeras-Alliance & Bleeding Hollow-Horde! <br />
+		| PixelPub is proud to represent #[a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft clan! <br>
+		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on Sargeras-Alliance & Bleeding Hollow-Horde! <br>
 		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/uw3PMqV") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
 	a(href="http://pixelpubgaming.com/blog/post/sea-of-thieves")
 		h1 Treasure & Adventure Awaits!
 	p#descGame3.between-text-block 
-		| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br />
-		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br />
+		| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br>
+		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br>
 		| For more info on how to join visit our #[a(href="http://pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]!
 	div#picGame4.game-img4.parallax.long
 	a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate")
 		h1 Hunters Unite!
 	p#descGame4.between-text-block 
-		| We are looking for hunters that enjoy community, fun and have a helpful attitude. <br />
-		| If you are interested in joining, visit our #[a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate") blog] or jump right into our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and get to hunting!	
+		| We are looking for hunters that enjoy community, fun and have a helpful attitude. <br>
+		| If you are interested in joining, visit our #[a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate") blog] or jump right into our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and get to hunting!
+	div#picGame5.game-img5.parallax.long
+	a(href="http://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server")
+		h1 Build, Tame, Survive
+	p#descGame5.between-text-block 
+		| The #[a(href="http://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server") PixelPub ARK servers] are committed to having a great experience, as a community. <br>
+		| Since the server is PvE, the gameplay focuses on community building, exploring dungeons, and killing the bosses! <br>
+		| Enjoy the scenery, tame dinos and build with your tribe, or go it solo and see if you can survive the harsh landscapes on your own!
 	div#wtn.wtn.parallax.long
 	div.divTable
 		div.divTableRow
@@ -69,8 +78,8 @@ block content
 		div.divTableRow
 			div.divTableCell
 				p#descGame3.between-text-block
-					| Tune in as Brandon, Jared and Andrew talk about current nerd culture. <br />
-					| Every week we dive into subjects like games, movies, tv and more! <br />
+					| Tune in as Brandon, Jared and Andrew talk about current nerd culture. <br>
+					| Every week we dive into subjects like games, movies, tv and more! <br>
 					| You can find us on #[a(href="http://pca.st/Udap") Pocket Casts], #[a(href="https://itunes.apple.com/us/podcast/we-talk-nerd/id1271123859?mt=2") iTunes], #[a(href="https://soundcloud.com/wtnpodcast") SoundCloud] and #[a(href="https://www.youtube.com/playlist?list=PLJr6VM66XZJ6W8LqWQIdrhlVNaEl4wHVL") YouTube]!
 		div.divTableRow
 			div#mediaCell.divTableCell
@@ -85,14 +94,14 @@ block content
 	a(href="https://www.twitch.tv/pixelpub")
 		h1 PIXELPUB ON TWITCH
 	p#descTwitch.between-text-block 
-		| Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br /> 
+		| Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br> 
 		| Make sure to say "Hi!" in chat, we love to talk to our twitch chat!
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br /> 
-		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! <br> 
+		| We have voice chat channels, text chat channels and promote a friendly gaming community. <br>
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 	
 	script(src='/js/jquery/jquery-3.2.1.min.js')
