--- a/templates/views/games.pug
+++ b/templates/views/games.pug
@@ -2,30 +2,25 @@ extends ../layouts/default
 
 block content
 
-	<!-- The video -->
-	div.long
-		video#d2Vid(autoplay='', muted='', loop='')
-			source(src='/videos/D2_Test_Vod.mp4', type='video/mp4')
-		.vidContent
-			h1 Test
-			p More testing
-			
-	div.long
-		video#d2Vid2(autoplay='', muted='', loop='')
-			source(src='/videos/D2_Test_Vod2.mp4', type='video/mp4')
-		.vidContent
-			h1 Test2
-			p More testing2
+	.divTable
+		.divTableRow
+			.divTableCell.thumbGame#game1
+				a(href='#')
+			.divTableCell.thumbGame#game2
+				a(href='#')
+			.divTableCell.thumbGame#game3
+				a(href='#')
+	
+	div#game1txt.divTable.hidden
+		p.russoOneh1B.fontSizeLarge Wrath Incarnate
+		img(src='/images/ppl-1.png')
+	div#game2txt.divTable.hidden
+		p.russoOneh1B.fontSizeLarge Wrath Incarnate
+		img(src='/images/ppl-1.png')
+	div#game3txt.divTable.hidden
+		p.russoOneh1B.fontSizeLarge Wrath Incarnate
+		img(src='/images/ppl-1.png')
 
-	//div#picGame1.game-img1.parallax.long
-	//div#picGame2.game-img2.parallax.long
-	//div#picGame3.game-img3.parallax.long
-	
-	// add when we get gameplay of these games
-	//div#picGame4.game-img4.parallax.long
-	//div#picGame5.game-img5.parallax.long
-	
 	script(src='/js/jquery/jquery-3.2.1.min.js')
 	script(src='/js/jquery-ui/jquery-ui.min.js')
-	script(src='/js/browserify/dist/bundle.js')
-	script(src='/js/custom-js/homepage.js')
+	script(src='/js/browserify/dist/games.js')
