--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -10,45 +10,163 @@ img {
 
 /**********************************************************************/
 
-/* Style the video: 100% width and height to cover the entire window */
+/* VIDEO CSS */
 
-/*
-#d2Vid {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-}
-*/
-
-#d2Vid {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+.header-video {
+	position: relative;
+	overflow: hidden;
 }
 
-#d2Vid2 {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+.header-video iframe,
+.header-video video {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
-/* Add some content at the bottom of the video/page */
-.vidContent {
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
+.header-video iframe {
+	height: 100%;
+	width: 100%;
+}
+
+.header-video video {
+	width: 100%;
+}
+
+.header-video__teaser-video {
+	width: 100%;
+	height: auto; 
+}
+
+.header-video__media {
+	width: 100%;
+	height: auto;
+}
+
+#textIframe {
+	font-size:2em;
+	text-align:center;
+	position: absolute;
+	left: 20%;
+	top: 20%;
+	margin-left: -150px;
+	margin-top: -25px;
+}
+
+.russoOneh1W {
+	text-shadow:0 1px 2px #333;
+	color: white;
+	font-family: 'Russo One', sans-serif !important;
+}
+
+.russoOneh1B {
+	text-shadow:0 1px 2px #333;
+	color: black;
+	font-family: 'Russo One', sans-serif !important;
+}
+
+.fontSizeSmall {
+	font-size: 1.5em;
+}
+
+.fontSizeMedium {
+	font-size: 2em;
+}
+
+
+.fontSizeLarge {
+	font-size: 3em;
+}
+
+.textCenter {
+	text-align: center;
+}
+
+.verticalAlign {
+	vertical-align: middle;
 }
 
 /**********************************************************************/
+
+/* Bouncing Arrow CSS */
+
+@-moz-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -moz-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -moz-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    -webkit-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+
+i {
+  display: block;
+  color: #fff;
+}
+
+.arrow {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -20px;
+  width: 40px;
+  height: 60px; /*change with size of arrow to make sit on bottom */
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+/**********************************************************************/
+
+.fadeIn {
+    opacity: 0;
+}
 
 #mediaCell {
 	text-align: center;
@@ -179,21 +297,6 @@ input:checked + .slider:before {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-video {
-	display: inline-block;
-    position: absolute;
-    top: 51%;
-    left: 51%;
-    min-width: 102%;
-    min-height: 102%;
-    width: auto;
-    height: auto;
-    -webkit-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-	z-index: -99;
 }
 
 .game-icons {
@@ -590,12 +693,66 @@ div#aboutBlock p {
 
 /**********************************************************************/
 
+/*Thumbnail Background*/
+.thumbGame {
+	width: 500px; height: 500px; margin: 70px auto;
+	perspective: 1000px;
+}
+
+.thumbGame a {
+	display: block; width: 100%; height: 100%;
+	/*double layered BG for lighting effect*/
+	background: 
+		linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+		url('/images/d2-games-logo.jpg');
+	/*disabling the translucent black bg on the main image*/
+	background-size: 0, cover;
+	/*3d space for children*/
+	transform-style: preserve-3d;
+	transition: all 0.5s;
+}
+
+.thumbGame:hover a {transform: rotateX(80deg); transform-origin: bottom;}
+
+/*bottom surface */
+.thumbGame a:after {
+	/*36px high element positioned at the bottom of the image*/
+	content: ''; position: absolute; left: 0; bottom: 0; 
+	width: 100%; height: 36px;
+	/*inherit the main BG*/
+	background: inherit; background-size: cover, cover;
+	/*draw the BG bottom up*/
+	background-position: bottom;
+	/*rotate the surface 90deg on the bottom axis*/
+	transform: rotateX(90deg); transform-origin: bottom;
+}
+
+/*label style*/
+.thumbGame a span {
+	color: white; text-transform: uppercase;
+	position: absolute; top: 100%; left: 0; width: 100%;
+	font: bold 12px/36px; text-align: center;
+	/*the rotation is a bit less than the bottom surface to avoid flickering*/
+	transform: rotateX(-89.99deg); transform-origin: top;
+	z-index: 1;
+}
+
+.thumbGame:hover a:before {
+	opacity: 1;
+	/*blurred effect using box shadow as filter: blur is not supported in all browsers*/
+	box-shadow: 0 0 25px 25px rgba(0, 0, 0, 0.5);
+	/*pushing the shadow down and scaling it down to size*/
+	transform: rotateX(0) translateZ(-60px) scale(0.85);
+}
+
+/**********************************************************************/
+
 .ppb-1 {
 	background-image: url('/images/ppb-1.jpg');
 	background-size: 100%;
 }
 
-/* game-img blocks should be used in priority of viewership per community */
+/* frontpage game-img blocks should be used in priority of viewership per community */
 
 .game-img1 {
 	background-image: url('/images/d2-press-1.jpg');
