--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -22,8 +22,9 @@ block content
 				| - Destiny 2 <br>
 				| - World of Warcraft <br>
 				| - ARK: Survival Evolved (Community Server) <br>
+				| - Minecraft (Community Server) <br>
 				| - Sea of Thieves <br>
-				| - Monster Hunter World <br>
+				| - Monster Hunter: World <br>
 				| - Fortnite <br>
 				| - PUBG <br>
 				| - Rainbow Six Siege <br>
