--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -3,7 +3,7 @@ extends ../layouts/default
 block content
 
 	div#ppb.ppb-1.parallax.short
-			
+	
 	div#ppIntroTbl.divTable
 		div#ppIntroTblRow1.divTableRow
 			div#ppIntroTblRow1CellLeft.divTableCell
@@ -15,7 +15,11 @@ block content
 					| rewarding, and brings gamers together to do what they love most, gaming. <br>
 					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br> <br>
 					| The following are some PixelPub community highlights!
-	
+					
+	.container
+		.arrow.bounce
+			iBlack.fa.fa-angle-down.fa-5x(aria-hidden='true')
+					
 	table#gameIconsTbl.game-icons.display-none
 		tr
 			td
