--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -374,6 +374,24 @@ div#aboutBlock p {
 		font-size: 190%;
 	}
 	
+	#textIframe {
+		position: static;
+		margin-left: 0px;
+		margin-top: 0px;
+	}
+	
+	.russoOneh1W {
+		color: black;
+	}
+	
+	.zoom {
+		padding: 0px;
+	}
+	
+	.divTableCell {
+		display: block;
+	}
+	
     .between-text-block {
 		font-size: 100%;
 		height: 110px;
@@ -498,6 +516,24 @@ div#aboutBlock p {
 @media screen and (min-width: 768px) {
 	h1 {
 		font-size: 190%;
+	}
+	
+	#textIframe {
+		position: absolute;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
+	.russoOneh1W {
+		color: white;
+	}
+	
+	.zoom {
+		padding: 50px;
+	}
+	
+	.divTableCell {
+		display: table-cell;
 	}
 	
 	div#ppProfileTblRow4CellLeft img.ppProfileImg {
