--- a/templates/views/worldofwarcraft.pug
+++ b/templates/views/worldofwarcraft.pug
@@ -3,10 +3,10 @@ extends ../layouts/default
 block content
 
 	.header-video
-		img.header-video__media(src='/images/ppb-1.jpg', data-video-url='https://www.youtube.com/embed/agVojhSdFyA', yt-video-id='0rtV7lvhbUs' data-teaser='video/teaser-video', data-video-width='560', data-video-height='315')
-	div#textIframeD2
-		h1#1inOut.russoOneh1W.hidden Destiny 2
-		h1#2inOut.russoOneh1W.hidden Wrath Incarnate
+		img.header-video__media(src='/images/ppb-1.jpg', data-video-url='https://www.youtube.com/embed/a7Z7X21dMuk', yt-video-id='0rtV7lvhbUs' data-teaser='video/teaser-video', data-video-width='560', data-video-height='315')
+	div#textIframeWow
+		h1#1inOut.russoOneh1W.hidden World of Warcraft
+		h1#2inOut.russoOneh1W.hidden The Bad Mama Jamas
 		h1#3inOut.russoOneh1W.hidden Scroll for more
 		
 	.container
@@ -14,9 +14,9 @@ block content
 			iWhite.fa.fa-angle-down.fa-5x(aria-hidden='true')
 			
 	.below
-		h1.fadeIn.russoOneh1B #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") WRATH INCARNATE]
+		h1.fadeIn.russoOneh1B #[a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") THE BAD MAMA JAMAS]
 		p.fadeIn.russoOneh1B.fontSizeSmall.textCenter
-			| "We took back our light, now we want everything else.."
+			| “On the frontlines of the war, on the battlefields for our homeland, we are The Bad Mama Jamas.”
 		p.fadeIn.russoOneh1B.fontSizeSmall
 			| We are #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Wrath Incarnate], a clan that strives to provide a rewarding and fun experience on Destiny 2. Destiny is best played with gamers that respect and help one another, this is the cornerstone of our clan. When players are respectful, helpful and have a common goal, great things can be achieved. Whether that goal is to complete the latest raid, or dominate in the Crucible, we got it.
 		p.fadeIn.russoOneh1B.fontSizeSmall
