--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -45,11 +45,21 @@ img {
 	height: auto;
 }
 
-#textIframe {
+#textIframeD2 {
 	font-size:2em;
 	text-align:center;
 	position: absolute;
-	left: 20%;
+	left: 35%;
+	top: 20%;
+	margin-left: -150px;
+	margin-top: -25px;
+}
+
+#textIframeWow {
+	font-size:2em;
+	text-align:center;
+	position: absolute;
+	left: 30%;
 	top: 20%;
 	margin-left: -150px;
 	margin-top: -25px;
@@ -374,7 +384,13 @@ div#aboutBlock p {
 		font-size: 190%;
 	}
 	
-	#textIframe {
+	#textIframeD2 {
+		position: static;
+		margin-left: 0px;
+		margin-top: 0px;
+	}
+	
+	#textIframeWow {
 		position: static;
 		margin-left: 0px;
 		margin-top: 0px;
@@ -518,8 +534,22 @@ div#aboutBlock p {
 		font-size: 190%;
 	}
 	
-	#textIframe {
+	#textIframeD2 {
+		font-size:2em;
+		text-align:center;
 		position: absolute;
+		left: 32%;
+		top: 15%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
+	#textIframeWow {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 22%;
+		top: 12%;
 		margin-left: -75px;
 		margin-top: -10px;
 	}
@@ -584,6 +614,16 @@ div#aboutBlock p {
 		font-size: 250%;
 	}
 	
+	#textIframeD2 {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 29%;
+		top: 15%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
 	div#ppProfileTblRow4CellLeft img.ppProfileImg {
 		margin-bottom: 50px;
 	}
@@ -618,6 +658,26 @@ div#aboutBlock p {
 @media screen and (min-width: 1440px) {
 	h1 {
 		font-size: 250%;
+	}
+	
+	#textIframeD2 {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 35%;
+		top: 20%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
+	#textIframeWow {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 29%;
+		top: 20%;
+		margin-left: -75px;
+		margin-top: -10px;
 	}
 	
 	div#ppProfileTblRow4CellLeft img.ppProfileImg {
@@ -662,6 +722,26 @@ div#aboutBlock p {
 		font-size: 300%;
 	}
 	
+	#textIframeD2 {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 36%;
+		top: 20%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
+	#textIframeWow {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 30%;
+		top: 20%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
 	div#ppProfileTblRow4CellLeft img.ppProfileImg {
 		margin-bottom: 50px;
 	}
@@ -702,6 +782,26 @@ div#aboutBlock p {
 @media screen and (min-width: 2560px) {
 	h1 {
 		font-size: 350%;
+	}
+	
+	#textIframeD2 {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 37%;
+		top: 20%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
+	#textIframeWow {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 33%;
+		top: 20%;
+		margin-left: -75px;
+		margin-top: -10px;
 	}
 
 	#descGame2.between-text-block {
