add patreon and alter text

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -44,7 +44,7 @@ block content
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
 		| Looking for a friendly, active and rewarding Destiny 2 community? Join #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") Wrath Incarnate]! <br>
-		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of Osiris! <br>
+		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of the Nine! <br>
 		| Click the link #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
 	div#picGame2.game-img2.parallax.long
 	a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas")
