--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -126,6 +126,9 @@ html
 			table.center
 				tr
 					td
+						<a href="https://www.patreon.com/bePatron?u=677363" data-toggle="tooltip" title="Become a patron!" target="_blank">
+							img(src='/images/patreon-footer.png')
+					td
 						<a href="http://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
 							img(src='/images/rss.png')
 					td
