--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -35,6 +35,7 @@ block content
 				| Games incoming to PixelPub: <br>
 				| <br>
 				| - Borderlands 3 <br>
+				| - The Division 2 <br>
 				| - Anthem <br>
 				| <br>
 				| If your game is not mentioned, start the fire in our community for your game! <br>
