new_wow_page + updates

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -76,6 +76,17 @@ img {
 	font-family: 'Russo One', sans-serif !important;
 }
 
+.bangersh1W {
+	text-shadow:0 1px 2px #333;
+	color: white;
+	font-family: 'Bangers', sans-serif !important;
+}
+
+.bangersh1B {
+	color: black;
+	font-family: 'Bangers', sans-serif !important;
+}
+
 .fontSizeSmall {
 	font-size: 1.5em;
 }
@@ -400,6 +411,10 @@ div#aboutBlock p {
 		color: black;
 	}
 	
+	.bangersh1W {
+		color: black;
+	}
+	
 	.zoom {
 		padding: 0px;
 	}
@@ -548,13 +563,17 @@ div#aboutBlock p {
 		font-size:2em;
 		text-align:center;
 		position: absolute;
-		left: 22%;
+		left: 35%;
 		top: 12%;
 		margin-left: -75px;
 		margin-top: -10px;
 	}
 	
 	.russoOneh1W {
+		color: white;
+	}
+	
+	.bangersh1W {
 		color: white;
 	}
 	
@@ -624,6 +643,16 @@ div#aboutBlock p {
 		margin-top: -10px;
 	}
 	
+	#textIframeWow {
+		font-size:2em;
+		text-align:center;
+		position: absolute;
+		left: 33%;
+		top: 12%;
+		margin-left: -75px;
+		margin-top: -10px;
+	}
+	
 	div#ppProfileTblRow4CellLeft img.ppProfileImg {
 		margin-bottom: 50px;
 	}
@@ -664,7 +693,7 @@ div#aboutBlock p {
 		font-size:2em;
 		text-align:center;
 		position: absolute;
-		left: 35%;
+		left: 36%;
 		top: 20%;
 		margin-left: -75px;
 		margin-top: -10px;
@@ -674,7 +703,7 @@ div#aboutBlock p {
 		font-size:2em;
 		text-align:center;
 		position: absolute;
-		left: 29%;
+		left: 38%;
 		top: 20%;
 		margin-left: -75px;
 		margin-top: -10px;
@@ -736,7 +765,7 @@ div#aboutBlock p {
 		font-size:2em;
 		text-align:center;
 		position: absolute;
-		left: 30%;
+		left: 39%;
 		top: 20%;
 		margin-left: -75px;
 		margin-top: -10px;
@@ -798,7 +827,7 @@ div#aboutBlock p {
 		font-size:2em;
 		text-align:center;
 		position: absolute;
-		left: 33%;
+		left: 40%;
 		top: 20%;
 		margin-left: -75px;
 		margin-top: -10px;
