--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -27,6 +27,7 @@ html
 		<link rel="manifest" href="/manifest.json">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
@@ -87,7 +88,7 @@ html
 										<a href="https://www.patreon.com/bePatron?u=677363" data-toggle="tooltip" title="Become a patron!" target="_blank">
 											img(src='/images/patreon.png').navbar-icon
 									td
-										<a href="http://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
+										<a href="https://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
 											img(src='/images/rss.png').navbar-icon
 									td
 										<a href="https://www.youtube.com/c/pixelpub" target="_blank">
@@ -129,7 +130,7 @@ html
 						<a href="https://www.patreon.com/bePatron?u=677363" data-toggle="tooltip" title="Become a patron!" target="_blank">
 							img(src='/images/patreon-footer.png')
 					td
-						<a href="http://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
+						<a href="https://www.pixelpubgaming.com/rss/pxprss.xml" target="_blank">
 							img(src='/images/rss.png')
 					td
 						<a href="https://www.youtube.com/c/pixelpub" target="_blank">
