--- a/templates/views/destiny.pug
+++ b/templates/views/destiny.pug
@@ -24,7 +24,7 @@ block content
 		p.fadeIn.russoOneh1B.fontSizeSmall
 			| #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate") Wrath Incarnate] is not only a Destiny clan, but a gaming community. We love Destiny but we also enjoy other games and game types (MOBAs, RPGs, MMOs, Card Games, etc). We encourage our clan members not only to play Destiny together, but play the games you love, meet new people and be a part of a great community of gamers.
 		p.fadeIn.russoOneh1B.fontSizeSmall
-			| This is a gaming community built around you, the player. We built our #[a(href="http://www.pixelpubgaming.com") website] to grow our community. We built our Discord server based upon user feedback and suggestions. We listen, make changes and help our members so they can enjoy social gaming at its best.
+			| This is a gaming community built around you, the player. We built our #[a(href="https://www.pixelpubgaming.com") website] to grow our community. We built our Discord server based upon user feedback and suggestions. We listen, make changes and help our members so they can enjoy social gaming at its best.
 		h1.fadeIn.russoOneh1B How to Join:
 		p.fadeIn.russoOneh1B.fontSizeSmall.textCenter
 			| 1) Join our #[a(href="https://discord.gg/uw3PMqV") Discord] <br> 
