--- a/templates/views/games.pug
+++ b/templates/views/games.pug
@@ -8,20 +8,20 @@ block content
 				a(href='/destiny')
 					img(src='/images/d2-games-logo-banner.jpg')
 			.divTableCell.zoom
-				a(href='http://pixelpubgaming.com/blog/post/pixelpub-world-of-warcraft-community')
+				a(href='/world-of-warcraft')
 					img(src='/images/WoW_BfA_Games_Logo.jpg')
 			.divTableCell.zoom
-				a(href='http://pixelpubgaming.com/blog/post/join-the-party-bus-fortnite-battle-royale')
+				a(href='https://pixelpubgaming.com/blog/post/join-the-party-bus-fortnite-battle-royale')
 					img(src='/images/fortnite-br-games-logo.jpg')
 		.divTableRow
 			.divTableCell.zoom
-				a(href='http://pixelpubgaming.com/blog/post/sea-of-thieves')
+				a(href='https://pixelpubgaming.com/blog/post/sea-of-thieves')
 					img(src='/images/SoT-games-logo.jpg')
 			.divTableCell.zoom
-				a(href='http://pixelpubgaming.com/blog/post/monster-hunter-world')
+				a(href='https://pixelpubgaming.com/blog/post/monster-hunter-world')
 					img(src='/images/mhw-games-logo.jpg')
 			.divTableCell.zoom
-				a(href='http://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server')
+				a(href='https://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server')
 					img(src='/images/ark-games-logo.jpg')
 				
 	.container
