--- a/templates/views/worldofwarcraft.pug
+++ b/templates/views/worldofwarcraft.pug
@@ -14,7 +14,7 @@ block content
 			iWhite.fa.fa-angle-down.fa-5x(aria-hidden='true')
 			
 	.below
-		h1.fadeIn.bangersh1B #[a(href="http://pixelpubgaming.com/blog/post/pixelpub-world-of-warcraft-community") THE BAD MAMA JAMAS]
+		h1.fadeIn.bangersh1B #[a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-world-of-warcraft-community") THE BAD MAMA JAMAS]
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
 			| Region: US-NA | Realm - Faction: #[a(href="http://us.battle.net/wow/en/guild/sargeras/The_Bad_Mama_Jamas/") Sargeras - Alliance] | #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas") Bleeding Hollow - Horde]
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
@@ -27,8 +27,8 @@ block content
 			| The Bad Mama Jamas is not only a WoW guild, but a gaming community. We love WoW but we also enjoy other games and game types (MOBAs, RPGs, FPS Games, Card Games, etc). We encourage our guild members not only to play WoW together, but play the games you love, meet new people and be a part of a great community of gamers.
 		h1.fadeIn.bangersh1B How to Join:
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
-			| 1) Join our #[a(href="https://discord.gg/uw3PMqV") Discord] and introduce yourself in the #the-tavern channel! <br> 
-			| 2) Looking to raid? Fill out our #[a(href="https://goo.gl/forms/P7LTU5azPYz2Tmxa2") Raiding Application] <br> 
+			| - Looking to raid? Fill out our #[a(href="https://goo.gl/forms/P7LTU5azPYz2Tmxa2") Raiding Application] <br> 	
+			| - To join as a casual member, join our #[a(href="https://discord.gg/uw3PMqV") Discord] and introduce yourself in the #the-tavern channel! <br> 
 			| If you have any questions regarding membership, feel free to reach out to our moderators on Discord.
 			
 	div#picDiscord.discord.parallax.long
