--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -40,37 +40,37 @@ block content
 				img(src='/images/discord-logo-press-1.png')#discordIcon
 			
 	div#picGame1.game-img1.parallax.long
-	a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
+	a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block 
-		| Looking for a friendly, active and rewarding Destiny 2 community? Join #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") Wrath Incarnate]! <br>
+		| Looking for a friendly, active and rewarding Destiny 2 community? Join #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") Wrath Incarnate]! <br>
 		| We take part in all aspects of the game: PvE, PvP, from prestige raids to Trials of the Nine! <br>
-		| Click the link #[a(href="http://pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
+		| Click the link #[a(href="https://www.pixelpubgaming.com/blog/post/destiny-2-clan-wrath-incarnate/") here] for our clan list and join today!
 	div#picGame2.game-img2.parallax.long
-	a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas")
+	a(href="https://www.pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas")
 		h1 BATTLE FOR AZEROTH
 	p#descGame2.between-text-block 
-		| PixelPub is proud to represent #[a(href="http://pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft clan! <br>
+		| PixelPub is proud to represent #[a(href="https://www.pixelpubgaming.com/blog/post/world-of-warcraft-guild-the-bad-mama-jamas") The Bad Mama Jamas] as our World of Warcraft clan! <br>
 		| To prepare for the new expansion "Battle for Azeroth", we are recruiting players to our guilds on Sargeras-Alliance & Bleeding Hollow-Horde! <br>
 		| You can expect good fun, great experiences and content progression! Join the #[a(href="https://discord.gg/uw3PMqV") Discord] and talk to a recruiter today!
 	div#picGame3.game-img3.parallax.long
-	a(href="http://pixelpubgaming.com/blog/post/sea-of-thieves")
+	a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves")
 		h1 Treasure & Adventure Awaits!
 	p#descGame3.between-text-block 
 		| Ready to set sails on the open sea? Need a hearty crew? Look no further! <br>
 		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br>
-		| For more info on how to join visit our #[a(href="http://pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]!
+		| For more info on how to join visit our #[a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]!
 	div#picGame4.game-img4.parallax.long
-	a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate")
+	a(href="https://www.pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate")
 		h1 Hunters Unite!
 	p#descGame4.between-text-block 
 		| We are looking for hunters that enjoy community, fun and have a helpful attitude. <br>
-		| If you are interested in joining, visit our #[a(href="http://pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate") blog] or jump right into our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and get to hunting!
+		| If you are interested in joining, visit our #[a(href="https://www.pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate") blog] or jump right into our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and get to hunting!
 	div#picGame5.game-img5.parallax.long
-	a(href="http://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server")
+	a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server")
 		h1 Build, Tame, Survive
 	p#descGame5.between-text-block 
-		| The #[a(href="http://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server") PixelPub ARK servers] are committed to having a great experience, as a community. <br>
+		| The #[a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server") PixelPub ARK servers] are committed to having a great experience, as a community. <br>
 		| Since the server is PvE, the gameplay focuses on community building, exploring dungeons, and killing the bosses! <br>
 		| Enjoy the scenery, tame dinos and build with your tribe, or go it solo and see if you can survive the harsh landscapes on your own!
 	div#wtn.wtn.parallax.long
