--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -27,7 +27,7 @@ block content
 			td
 				img(src='/images/wow-battle-for-azeroth-logo-press-1-small.png')#game2Icon
 			td
-				img(src='/images/SoTlogo.png')#game3Icon
+				img(src='/images/sotlogo.png')#game3Icon
 			td
 				img(src='/images/mhwlogo.png')#game4Icon
 			td
