--- a/templates/views/worldofwarcraft.pug
+++ b/templates/views/worldofwarcraft.pug
@@ -16,7 +16,7 @@ block content
 	.below
 		h1.fadeIn.bangersh1B #[a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-world-of-warcraft-community") THE BAD MAMA JAMAS]
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
-			| Region: US-NA | Realm - Faction: #[a(href="http://us.battle.net/wow/en/guild/sargeras/The_Bad_Mama_Jamas/") Sargeras - Alliance] | #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas") Bleeding Hollow - Horde]
+			| Region: US-NA | Realm - Faction: #[a(href="https://guildsofwow.com/the-bad-mama-jamas") Sargeras - Alliance] | #[a(href="https://guildsofwow.com/the-bad-mama-jamas-h") Bleeding Hollow - Horde]
 		p.fadeIn.bangersh1B.fontSizeSmall.textCenter
 			| “On the frontlines of the war, on the battlefields for our homeland, we are The Bad Mama Jamas.”
 		p.fadeIn.bangersh1B.fontSizeSmall
