--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -901,7 +901,7 @@ div#aboutBlock p {
 }
 
 .game-img4 {
-	background-image: url('/images/MHW.jpg');
+	background-image: url('/images/rocket-league-banner.jpg');
 	background-size: 100%;
 }
 
