--- a/templates/views/games.pug
+++ b/templates/views/games.pug
@@ -15,14 +15,25 @@ block content
 					img(src='/images/fortnite-br-games-logo.jpg')
 		.divTableRow
 			.divTableCell.zoom
+				a(href='https://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server')
+					img(src='/images/ark-games-logo.jpg')
+			.divTableCell.zoom
+				a(href='https://www.pixelpubgaming.com/blog/post/rocket-league')
+					img(src='/images/rocket-league-banner.jpg')
+			.divTableCell.zoom
+				a(href='https://www.pixelpubgaming.com/blog/post/heroes-needed-overwatch')
+					img(src='/images/overwatch-banner.jpg')
+		.divTableRow
+			.divTableCell.zoom
 				a(href='https://pixelpubgaming.com/blog/post/sea-of-thieves')
 					img(src='/images/SoT-games-logo.jpg')
 			.divTableCell.zoom
 				a(href='https://pixelpubgaming.com/blog/post/monster-hunter-world')
 					img(src='/images/mhw-games-logo.jpg')
 			.divTableCell.zoom
-				a(href='https://pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server')
-					img(src='/images/ark-games-logo.jpg')
+				a(href='https://www.pixelpubgaming.com/blog/post/rainbow-six-siege')
+					img(src='/images/r6-siege-banner.png')
+			
 				
 	.container
 		.arrow.bounce
