--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -29,7 +29,7 @@ block content
 			td
 				img(src='/images/sotlogo.png')#game3Icon
 			td
-				img(src='/images/mhwlogo.png')#game4Icon
+				img(src='/images/rocket-league-logo.png')#game4Icon
 			td
 				img(src='/images/arklogo.png')#game5Icon
 			td
@@ -61,11 +61,11 @@ block content
 		| We have a community of pirates ready to brave the open seas, unlock treasure and fight with you! <br>
 		| For more info on how to join visit our #[a(href="https://www.pixelpubgaming.com/blog/post/sea-of-thieves") blog] and don’t forget to join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]!
 	div#picGame4.game-img4.parallax.long
-	a(href="https://www.pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate")
-		h1 Hunters Unite!
+	a(href="https://www.pixelpubgaming.com/blog/post/rocket-league")
+		h1 The Best Rocket League!
 	p#descGame4.between-text-block 
-		| We are looking for hunters that enjoy community, fun and have a helpful attitude. <br>
-		| If you are interested in joining, visit our #[a(href="https://www.pixelpubgaming.com/blog/post/monster-hunter-world-squad-wrath-incarnate") blog] or jump right into our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and get to hunting!
+		| PixelPub offers a fun, active and helpful Rocket League community. <br>
+		| Whether you are a seasoned veteran or new player, come join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and visit our #[a(href="https://www.pixelpubgaming.com/blog/post/rocket-league") blog] to learn more!
 	div#picGame5.game-img5.parallax.long
 	a(href="https://www.pixelpubgaming.com/blog/post/pixelpub-ark-survival-evolved-pc-pve-server")
 		h1 Build, Tame, Survive
